/*
Copyright 2023 The Paraglider Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package tagservicepb;

option go_package="github.com/paraglider-project/paraglider/pkg/tag_service/tagservicepb";

service TagService {
    rpc SetTag(SetTagRequest) returns (SetTagResponse) {}
    rpc GetTag(GetTagRequest) returns (GetTagResponse) {}
    rpc ResolveTag(ResolveTagRequest) returns (ResolveTagResponse) {}
    rpc ListTags(ListTagsRequest) returns (ListTagsResponse) {}
    rpc DeleteTagMember(DeleteTagMemberRequest) returns (DeleteTagMemberResponse) {}
    rpc DeleteTag(DeleteTagRequest) returns (DeleteTagResponse) {}
    rpc Subscribe(SubscribeRequest) returns (SubscribeResponse) {}
    rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse) {}
    rpc GetSubscribers(GetSubscribersRequest) returns (GetSubscribersResponse) {}
}

message Subscription {
    string tag_name = 1;
    string subscriber = 2;
}

message TagMapping {
    string name = 1;
    repeated string child_tags = 2;
    optional string uri = 3;
    optional string ip = 4;
}

message SetTagRequest {
    TagMapping tag = 1;
}

message SetTagResponse {
}

message GetTagRequest {
    string tag_name = 1;
}

message GetTagResponse {
    TagMapping tag = 1;
}

message ResolveTagRequest {
    string tag_name = 1;
}

message ResolveTagResponse {
    repeated TagMapping tags = 1;
}

message ListTagsRequest {
}

message ListTagsResponse {
    repeated TagMapping tags = 1;
}

message DeleteTagMemberRequest {
    string parent_tag = 1;
    string child_tag = 2;
}

message DeleteTagMemberResponse {
}

message DeleteTagRequest {
    string tag_name = 1;
}

message DeleteTagResponse {
}

message SubscribeRequest {
    Subscription subscription = 1;
}

message SubscribeResponse {
}

message UnsubscribeRequest {
    Subscription subscription = 1;
}

message UnsubscribeResponse {
}

message GetSubscribersRequest {
    string tag_name = 1;
}

message GetSubscribersResponse {
    repeated string subscribers = 1;
}
